LU-19202 llite: revert truncate_inode_pages() under inode lock

commit 7bb1e211d2 ("LU-16637 llite: tolerate fresh page cache pages
after truncate") has made it tolerate fresh pages after truncate so
we can avoid expensive locking for race cases just to make sure there
is no leftover in the cache after truncate.

Fixes: 37646c74bf ("LU-16958 llite: migrate deadlock on not responding lock cancel")
Fixes: ef9be34478 ("LU-16637 llite: call truncate_inode_pages() under inode lock")
Fixes: 51d62f2122 ("LU-16637 llite: call truncate_inode_pages() under inode lock")
Signed-off-by: Bobi Jam <bobijam@whamcloud.com>
Change-Id: I80735063bb849d232e15149db345e4c4846bec1d
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/60457
Tested-by: jenkins <devops@whamcloud.com>
Reviewed-by: Qian Yingjin <qian@ddn.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Patrick Farrell <pfarrell@whamcloud.com>